Fix clipping of paths layer; style paths to make multiple paths readable.

--- a/index.css
+++ b/index.css
@@ -14,19 +14,22 @@ body {
 	width: 100%;
 	height: 100%;
 }
-
+#boggle-paths {
+	overflow: visible;
+}
 #boggle-paths path {
 	stroke-width: 3;
 	fill: none;
+	opacity: .5;
 }
 
-#boggle-paths path:nth-child(1) { stroke: red; }
-#boggle-paths path:nth-child(2) { stroke: orange; }
-#boggle-paths path:nth-child(3) { stroke: yellow; }
-#boggle-paths path:nth-child(4) { stroke: green; }
-#boggle-paths path:nth-child(5) { stroke: blue; }
-#boggle-paths path:nth-child(6) { stroke: indigo; }
-#boggle-paths path:nth-child(7) { stroke: violet; }
+#boggle-paths path:nth-child(1) { stroke-width: 4; stroke: red; }
+#boggle-paths path:nth-child(2) { stroke-width: 8; stroke: orange; }
+#boggle-paths path:nth-child(3) { stroke-width: 12; stroke: yellow; }
+#boggle-paths path:nth-child(4) { stroke-width: 16; stroke: green; }
+#boggle-paths path:nth-child(5) { stroke-width: 20; stroke: blue; }
+#boggle-paths path:nth-child(6) { stroke-width: 24; stroke: indigo; }
+#boggle-paths path:nth-child(7) { stroke-width: 28; stroke: violet; }
 
 .node {
 	position: absolute;
